--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="button_text">Enter to system </string>
     <string name="label_text">Your id is  </string>
     <string name="hint">write your id   </string>
+    <string name="id">Your id is  </string>
 </resources>
