--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="label_text">Your id is  </string>
     <string name="hint">write your id   </string>
     <string name="id">Your id is  </string>
+    <string name="showAll">show </string>
 </resources>
